data/forge_javadoc/1.7.10/processed/net_minecraft_util_ChatComponentStyle.md
# ChatComponentStyle

**Inheritance:** java.lang.Object → net.minecraft.util.ChatComponentStyle

## Class signature

```java
public abstract class ChatComponentStyle extends java.lang.Object implements IChatComponent
```

## Constructors

- `ChatComponentStyle()`

## Methods

- `IChatComponent appendSibling(IChatComponent p_150257_1_)`
- `IChatComponent appendText(java.lang.String p_150258_1_)`
- `static java.util.Iterator createDeepCopyIterator(java.lang.Iterable p_150262_0_)`
- `boolean equals(java.lang.Object p_equals_1_)`
- `ChatStyle getChatStyle()`
- `java.lang.String getFormattedText()`
- `java.util.List getSiblings()`
- `java.lang.String getUnformattedText()`
- `int hashCode()`
- `java.util.Iterator iterator()`
- `IChatComponent setChatStyle(ChatStyle p_150255_1_)`
- `java.lang.String toString()`

## Fields

- `protected java.util.List siblings`